fix: horizontal scrollbar

--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,5 +1,5 @@
 .page__container {
-    min-width: 320px;
+    min-width: 285px;
     max-width: 1184px;
     width: 100%;
     min-height: 100vh;
