--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,8 +2,8 @@
     font-family: 'Inter', Arial, sans-serif;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
     .photo-grid {
-        padding: 0 16px;
+        padding: 0 12px;
     }
 }
